--- a/BackEnd S5-L5/Views/_ViewImports.cshtml
+++ b/BackEnd S5-L5/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using BackEnd_S5_L5
+﻿@using BackEnd_S5_L5.Models.Entities
+@using BackEnd_S5_L5
 @using BackEnd_S5_L5.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
