--- a/BackEnd S5-L5/Views/Home/Index.cshtml
+++ b/BackEnd S5-L5/Views/Home/Index.cshtml
@@ -2,24 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Violazioni </h1>
-
-<div class="container">
-    <div class="row">
-
-        <div class="col-md-4 mb-3">
-            <div class="card ">
-
-                <div class="card-body">
-                    <h5 class="card-title">Violazione</h5>
-                    <p class="card-text">Cognome Nome</p>
-                    <p class="card-text">Data</p>
-                    <button type="submit">Contesta</button>
+<h3 class="text-center mt-3">Benvenuti nel portale della</h3>
+<h1 class="text-center mt-2">Polizia Municipale</h1>
 
 
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
