--- a/BackEnd S5-L5/Views/Verbali/Index.cshtml
+++ b/BackEnd S5-L5/Views/Verbali/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Verbali</h2>
 
-<h4>Aggiungi Verbale</h4>
+<h4 class="mt-3">Aggiungi Verbale</h4>
 
 <form asp-controller="Verbali" asp-action="Index" method="post">
 
