--- a/BackEnd S5-L5/Views/Trasgressori/Index.cshtml
+++ b/BackEnd S5-L5/Views/Trasgressori/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Trasgressori</h2>
 
-<h4>Aggiungi Trasgressore</h4>
+<h4 class="mt-3">Aggiungi Trasgressore</h4>
 <form asp-controller="Trasgressori" asp-action="Index" method="post">
     <div class="mb-3">
         <label class="form-label ">Cognome</label>
