--- a/BackEnd S5-L5/Views/Violazioni/Index.cshtml
+++ b/BackEnd S5-L5/Views/Violazioni/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Violazioni</h2>
 
-<h4>Aggiungi Violazione</h4>
+<h4 class="mt-3">Aggiungi Violazione</h4>
 <form asp-action="Index" method="post">
     <div class="mb-2">
         <input type="text" name="Descrizione" class="form-control" placeholder="Descrizione della violazione" required />
@@ -25,7 +25,7 @@
         {
             <tr>
                 <td>@v.Descrizione</td>
-                <td >
+                <td>
                     <a class="text-black " asp-controller="Violazioni" asp-action="Update" asp-route-id="@v.IdViolazione">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
@@ -33,7 +33,7 @@
                         </svg>
                     </a>
                 </td>
-                <td >
+                <td>
                     <form asp-controller="Violazioni" asp-action="Delete" asp-route-id="@v.IdViolazione" method="post" style="display:inline">
                         <button class="text-black " type="submit" onclick="return confirm('Sei sicuro di voler eliminare la violazione?');"
                                 style="border:none; background:none; padding:0;">
